--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
-    "react-native-tab-view": "^3.2.1",
-    "react-native-pager-view": "5.4.24"
+    "react-native-pager-view": "5.4.24",
+    "react-native-tab-view": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
